language/move-lang/tests/move_check/parser/function_without_body.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/function_without_body.move:3:13
  │
3 │     fun fn();
  │             ^
  │             │
  │             Unexpected ';'
  │             Expected '{'

